--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=8080
 MONGODB_CNN =mongodb+srv://Daragon:AoHoC6RTG1x7dN9W@cluster0.amf4f.mongodb.net/Cluster0
 USER = Daragon
 PASS= Tgr8wALPqclxq2la
+SECRETORPRIVATEKEY = Cr!st14n0R=n4ld0@.
