google token implementado

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MONGODB_CNN =mongodb+srv://Daragon:AoHoC6RTG1x7dN9W@cluster0.amf4f.mongodb.net/C
 USER = Daragon
 PASS= Tgr8wALPqclxq2la
 SECRETORPRIVATEKEY = Cr!st14n0R=n4ld0@.
+
+GOOGLE_CLIENT_ID = 1028069775807-bq70o7uqqoiej30s9puk9qvhfegnmdor.apps.googleusercontent.com
+GOOGLE_SECRET_ID = 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
