subida y muestra de imagenes

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ SECRETORPRIVATEKEY = Cr!st14n0R=n4ld0@.
 
 GOOGLE_CLIENT_ID = 1028069775807-bq70o7uqqoiej30s9puk9qvhfegnmdor.apps.googleusercontent.com
 GOOGLE_SECRET_ID = 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
+
+CLOUDINARY_URL=cloudinary://778418334497398:YLc3jNY627QoBT_DEZ2xcQTnL1s@dgtsenqej
